[project]
name = "blog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "adheeb2",email = "adheebanvar2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
